Salesforce LWC/force-app/main/default/objects/Property__c/fields/Agent_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_Amount__c</fullName>
    <description>Holds the amount of commission to be paid to the agent.</description>
    <label>Agent Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>