Salesforce LWC/force-app/main/default/objects/Property__c/fields/Agent_Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_Percentage__c</fullName>
    <description>The percentage of the total commission received by the agent. When 
an agent first claims a property, this should equal the percentage in the Default Commission Split on 
the agent’s Contact record</description>
    <label>Agent Commission Percentage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>