Salesforce LWC/force-app/main/default/objects/Property__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <description>The date the property was closed</description>
    <label>Sale Date</label>
    <type>Date</type>
</CustomField>