Salesforce LWC/force-app/main/default/objects/Property__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <description>The actual sales price of the property</description>
    <label>Sales Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>